Changed sink endpoints and timestamps maps to be concurrent
Signed-off-by: Paolo Patierno <ppatierno@live.com>